<resources>
    <string name="app_name">Calculator</string>
    <string name="enter_number_1">Enter number 1</string>
    <string name="enter_number_2">Enter number 2</string>
    <string name="result">Result</string>
    <string name="divide">Divide</string>
    <string name="multiply">Multiply</string>
    <string name="subtract">Subtract</string>
    <string name="add">Add</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="imagecalc" translatable="false">imageCalc</string>
    <string name="empty">Please enter a number.</string>
    <string name="divide_by_zero">Please do not divide by 0.</string>
    <string name="clearButton">Button</string>
    <string name="closeButton">Button</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
</resources>