<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_number_1"
        android:inputType="numberDecimal"
        android:textColorHint="#A1887F"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberDecimal2"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal2"
        app:layout_constraintTop_toBottomOf="@+id/textResult" />

    <EditText
        android:id="@+id/editTextNumberDecimal2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_number_2"
        android:inputType="numberDecimal"
        android:textColorHint="#A1887F"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="373dp" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/result"
        android:textColorHint="#A1887F"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumberDecimal"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="@+id/editTextNumberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/imageCalc" />

    <Button
        android:id="@+id/divideButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="84dp"
        android:gravity="center"
        android:text="@string/divide"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/multiplyButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/multiply"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/divideButton"
        app:layout_constraintEnd_toEndOf="@+id/divideButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/divideButton"
        app:layout_constraintTop_toBottomOf="@+id/subtractButton" />

    <Button
        android:id="@+id/subtractButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/subtract"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/multiplyButton"
        app:layout_constraintEnd_toEndOf="@+id/multiplyButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/multiplyButton"
        app:layout_constraintTop_toBottomOf="@+id/addButton" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:contentDescription="@string/add"
        android:gravity="center"
        android:text="@string/add"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/subtractButton"
        app:layout_constraintEnd_toEndOf="@+id/subtractButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/subtractButton"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal2" />

    <ImageView
        android:id="@+id/imageCalc"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/imagecalc"
        app:layout_constraintBottom_toTopOf="@+id/textResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:srcCompat="@drawable/baseline_calculate_24" />

</androidx.constraintlayout.widget.ConstraintLayout>